--- a/index.html
+++ b/index.html
@@ -377,6 +377,19 @@
 							</a>
 						</li>
 					</ul>
+					
+					<!-- 모바일 버전 보기 -->
+					<div class="ver-pop-wrap">
+						<div class="ver-pop-bg"></div>
+
+						<div class="ver-pop">
+							<a href="#" class="ver-pop-close">close</a>
+
+							<div class="ver-pop-cont">
+								<img src="./images/mobile-ver.jpg" alt="실험" />
+							</div>
+						</div>
+					</div>
 				</article>
 
 				<!-- 에필로그 -->
