--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 							<a href="#" class="ver-pop-close">close</a>
 
 							<div class="ver-pop-cont">
-								<img src="./images/mobile-ver.jpg" alt="실험" />
+								<img src="./images/mobile-ver.jpg" alt="모바일 버전 사진" />
 							</div>
 						</div>
 					</div>
